Added analytics dashboard scheduler email alerts and SaaS tracking features